<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_grade"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_grade" />
        <item
            android:id="@+id/nav_exam"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_exam" />
        <item
            android:id="@+id/nav_course"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_course" />
        <item
            android:id="@+id/nav_building"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/menu_building" />
    </group>
</menu>