<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hfdlys.bjtuselfservice.fragment.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_mailFragment"
            app:destination="@id/nav_mail" />
    </fragment>

    <fragment
        android:id="@+id/nav_mail"
        android:name="com.hfdlys.bjtuselfservice.fragment.mail.MailFragment"
        tools:layout="@layout/fragment_mail" />

    <fragment
        android:id="@+id/nav_grade"
        android:name="com.hfdlys.bjtuselfservice.fragment.grade.GradeFragment"
        android:label="@string/menu_grade"
        tools:layout="@layout/fragment_grade" />

    <fragment
        android:id="@+id/nav_exam"
        android:name="com.hfdlys.bjtuselfservice.fragment.exam.ExamFragment"
        android:label="@string/menu_exam"
        tools:layout="@layout/fragment_exam" />

    <fragment
        android:id="@+id/nav_course"
        android:name="com.hfdlys.bjtuselfservice.fragment.course.CourseFragment"
        android:label="@string/menu_course"
        tools:layout="@layout/fragment_course" />

    <fragment
        android:id="@+id/nav_building"
        android:name="com.hfdlys.bjtuselfservice.fragment.evaluation.building.BuildingFragment"
        android:label="@string/menu_building"
        tools:layout="@layout/fragment_building">
        <action
            android:id="@+id/action_buildingFragment_to_classroomFragment"
            app:destination="@id/nav_classroom" />
    </fragment>

    <fragment
        android:id="@+id/nav_classroom"
        android:name="com.hfdlys.bjtuselfservice.fragment.evaluation.classroom.ClassroomFragment"
        android:label="@string/menu_building"
        tools:layout="@layout/fragment_classroom" />

</navigation>